Finished expand_collapse

--- a/expand_collapse/index.html
+++ b/expand_collapse/index.html
@@ -19,13 +19,13 @@
             rollovers, rotate headlines, provide animation, and more. And it's a subject 
             that's glossed over or ignored in most other books.</p>
         </div>
-        <div class="hide">
+        <div id="book" class="hide">
             <p>But now, you can go from JavaScript beginner to DOM scripting expert in a 
 		    single book! Fast-paced, professional, and packed with expert practices, our 
 			new JavaScript book guides you through each step as you learn how to program 
 			sites that enhance the user experience and ensure browser compatibility.</p>
 		</div>
-		<a href="#">Show more</a>			
+		<a href="#">Show more</a>
 		
 		<h2>About the author</h2>
 		<div>
@@ -33,7 +33,7 @@
             as soon as you review the 20 complete applications that he presents in this 
             book.</p>
         </div>
-        <div class="hide">
+        <div id="author" class="hide">
 			<p>Ray Harris is much more than a JavaScript programmer. He has a Master's degree 
 			in Computer Science and Artificial Intelligence. He worked on advanced 
 			research projects at the Air Force Research Lab while he was in the USAF. 
@@ -52,7 +52,7 @@
             <p>Due to our unique presentation methods and this book's modular organization,
 			this is the right book for any web developer who wants to use JavaScript effectively.</p>
 		</div>
-		<div class="hide"> 
+		<div id="who" class="hide">
 			<p>Here's just a partial list of who can use this book:</p>
 			<ul>
 				<li>Web developers who know HTML and CSS and are ready to master JavaScript.</li> 
